--- a/Application/Resources/zh_CN.lproj/Localizable.strings
+++ b/Application/Resources/zh_CN.lproj/Localizable.strings
@@ -6,3 +6,126 @@
 */
 
 "Global.AppName" = "个人云";
+"Global.Cloud" = "个人云";
+"Global.Unavailable" = "尚未开放";
+"Global.FeatureUnavailable" = "此功能暂时不可用。";
+
+"Global.OKAction" = "好";
+"Global.ConfirmAction" = "确认";
+"Global.CancelAction" = "取消";
+"Global.BackAction" = "返回";
+"Global.LoadingStatus" = "正在加载……";
+"Global.DiscardChanges.Short" = "放弃所做更改？";
+"Global.DiscardChanges.Long" = "您有尚未保存的更改，要保存这些更改后再返回，请勿直接使用“返回”或“取消”按钮。";
+"Global.DiscardChanges.Confirm" = "立即放弃";
+"Global.DiscardChanges.Back" = "查看更改";
+"Global.NoPreview.Short" = "无法预览此类文件";
+"Global.NoPreview.Long" = "已安装的 App 均不提供此类文件的预览，即时预览已取消。\n\n您仍然可以将文件分享给他人或在其它 App 中打开。如果您前往其它 App，文件和相簿共享可能中断。";
+"Global.NoPreview.OpenIn" = "分享到…";
+
+"Error.CreateCloud" = "无法创建个人云";
+"Error.EnrollDevice" = "无法加入个人云";
+"Error.NoCloudInNetwork" = "未发现可以加入的个人云。";
+"Error.Invite" = "无法生成邀请码";
+"Error.RemoteHTTP" = "与远程设备通讯时遇到问题";
+"Error.Download" = "无法下载文件";
+"Error.IOConflict" = "文件访问冲突，请重试。";
+"Error.NewFolder" = "无法创建文件夹";
+"Error.Rename" = "无法重命名此项目";
+"Error.Move" = "无法完成移动";
+"Error.Delete" = "无法删除此项目";
+"Error.Upload" = "无法上传文件";
+"Error.Timeout" = "等待远程设备响应过程中超时。";
+"Error.RefreshDirectory" = "无法打开文件夹";
+"Error.OldVersion.Short" = "App 版本不匹配";
+"Error.OldVersion.Long" = "个人云内的设备已安装更新版本 App，请升级您设备上的个人云 App 以连接其它设备。";
+
+"Permission.Photos" = "您已拒绝个人云使用“照片”。请前往系统设置 App 更改隐私授权。";
+
+"Help.Finder" = "管理其它设备上的文件";
+"Help.BrowseInFinder" = "同一网络内其它设备上的个人云 App 运行时，您可以直接管理其共享的文件。\n\n点击一台设备以查看其共享文件夹。左右轻扫文件或文件夹以执行删除等操作。使用屏幕顶部右侧的按钮创建新文件夹或上传新文件。\n\n要管理此设备上本地收藏的文件，请前往“本地收藏”页或打开系统“文件” App；不推荐在此页面访问本设备上的共享文件夹。";
+
+"Finder.Title" = "个人云";
+"Finder.EmptyRoot" = "无可访问设备或第三方服务";
+"Finder.Device" = "设备";
+"Finder.GoHome" = "返回顶层";
+"Finder.ReturnToRoot" = "后退至设备列表";
+"Finder.GoBack" = "返回上层";
+"Finder.ReturnTo.Formattable" = "后退至“{0}”";
+"Finder.CurrentDirectory" = "当前所在目录";
+"Finder.Favorite" = "收藏";
+"Finder.AddedToFavorite" = "已收藏";
+"Finder.ItemAddedToFavorite.Formattable" = "“{0}”已加入收藏夹。";
+"Finder.ReplaceLocalFavorite" = "替换本地同名文件？";
+"Finder.ReplaceFavoriteAlternatives.Formattable" = "本地收藏中已存在同名文件“{0}”，收藏新文件将替换旧文件。\n\n如果您想要同时保留新、旧收藏，请在本地收藏管理页面手动重命名冲突的文件。";
+"Finder.Replace" = "替换";
+"Finder.DownloadOversizedFile" = "立即下载此文件？";
+"Finder.SizeOver100MB" = "此文件尚未下载并且大小可能超过 100 MB，下载将需要一段时间。";
+"Finder.StartDownloading" = "开始下载";
+"Finder.Downloading" = "正在下载……";
+"Finder.Move" = "移动";
+"Finder.MoveTo" = "移动到……";
+"Finder.Moving" = "正在移动……";
+"Finder.Rename" = "重命名";
+"Finder.NewName" = "输入新名称";
+"Finder.RenameItem.Formattable" = "即将重命名“{0}”";
+"Finder.SaveNewName" = "保存新名称";
+"Finder.BadFileName" = "新名称无效";
+"Finder.Renaming" = "正在重命名……";
+"Finder.Delete" = "删除";
+"Finder.RemoveDevice" = "从个人云中移除此存储？";
+"Finder.RemoveCredentials.Formattable" = "移除“{0}”将同时删除已保存的连接和登录凭据。\n\n下次添加此存储时，您必须重新提供这些凭据。";
+"Finder.DeleteFile" = "删除此项目？";
+"Finder.DeleteContents.Formattable" = "将从远程设备上删除“{item.Name}”。\n\n如果此项目是文件夹或包，其中的内容将被一同删除。";
+"Finder.Deleting" = "正在删除……";
+"Finder.NewFolderName" = "输入文件夹名称";
+"Finder.NewFolderHere" = "将在当前位置创建如下命名的子文件夹";
+"Finder.NewFolderPlaceholder" = "新文件夹";
+"Finder.CreateNewFolder" = "创建";
+"Finder.BadFolderName" = "文件夹名称无效";
+"Finder.MakingNewFolder" = "正在创建……";
+"Finder.UploadPickFromFavorites" = "上传本地收藏文件";
+"Finder.UploadOpenFilesApp" = "上传其它 App 的文件";
+"Finder.SelectOneFileOnly" = "仅支持单文件上传";
+"Finder.ConcurrentUploadNotSupported" = "当前版本只能同时上传 1 个文件。";
+"Finder.CannotReadFromFilesApp" = "不支持此共享方式";
+"Finder.ThirdPartyAppNotCompatible" = "来源 App 正在使用特殊方式交换此文件，个人云无法访问文件数据。";
+"Finder.Uploading" = "正在上传……";
+
+"Backup.RestoreFromPLAsset" = "恢复相册备份";
+"Backup.DownloadBeforeRestore.Formattable" = "“{0}”是个人云相册备份文件，包含可供导入本机相册的照片或视频。\n\n请轻扫并点击“收藏”以将此备份下载到本地，然后前往“本地收藏”恢复此备份。";
+
+"Welcome.Creating" = "正在创建个人云……";
+"Welcome.Created" = "已创建";
+"Welcome.CreatedCloud.Formattable" = "您已创建并加入个人云“{0}”。";
+"Welcome.Verifying" = "正在获取信息……";
+"Welcome.Accepted" = "已加入";
+"Welcome.AcceptedByCloud.Formattable" = "您已加入个人云“{0}”。";
+
+"Settings.DeviceName" = "设备名称";
+"Settings.DeviceNameHint" = "加入个人云后，其它设备将显示上述名称用以识别这台设备。为保证其它设备可以正常访问，请使用简短、不包含特殊字符、且不与其它设备重复的名称。";
+"Settings.SaveDeviceName" = "保存新名称";
+"Settings.CloudName" = "云名称";
+"Settings.Invitation" = "邀请码";
+"Settings.SendInvitation" = "邀请新设备加入";
+"Settings.SendingInvitation" = "正在生成……";
+"Settings.InvitationGenerated" = "已生成邀请码";
+"Settings.InvitationForOtherDevices.Formattable" = "请在其它设备输入邀请码：\n\n{0}\n\n离开此界面邀请码将失效。";
+"Settings.RevokeInvitation" = "停止邀请";
+"Settings.BadDeviceName" = "设备名称无效";
+"Settings.NoSpecialCharacters" = "请使用简短、不包含特殊字符、且不与其它设备重复的名称。";
+"Settings.BadCloudName" = "云名称无效";
+"Settings.CloudNameCannotBeEmpty" = "个人云名称不能为空。";
+"Settings.BadInvitation" = "邀请码错误";
+"Settings.EnterValidInvitation" = "请查看其它设备屏幕上显示的邀请码，并核对您的输入。";
+"Settings.SwitchPersonalCloud" = "切换或离开个人云";
+"Settings.LeaveHint" = "如果此个人云内仍有其它设备，您可以通过其它设备的邀请再次加入。当最后一台设备离开时，此个人云将消失。";
+"Settings.Leave" = "从个人云中移除此设备？";
+"Settings.LeaveWillUnenrollDevice" = "当前设备将离开个人云，本地保存的相关信息也将删除。";
+"Settings.FileSharing" = "文件共享";
+"Settings.EnableFileSharing" = "允许此设备分享文件";
+"Settings.AutoLockDisabled" = "为保证峰值设备性能，“文件共享”打开时自动锁定将暂时禁用，且屏幕不会关闭。";
+"Settings.PhotoSharing" = "相簿共享";
+"Settings.EnablePhotoSharing" = "允许此设备分享相簿";
+"Settings.WritingToPhotosRestricted.Formattable" = "由于系统限制，仅向其它设备提供 {0} 相簿只读权限。您无法通过向“相簿”共享文件夹中添加文件来将照片导入 {0} 相簿。";
+"Settings.CannotReadPhotos" = "无法访问相簿";
