--- a/Application/Resources/Base.lproj/Localizable.strings
+++ b/Application/Resources/Base.lproj/Localizable.strings
@@ -6,3 +6,219 @@ Last Updated: 2020-04-21 / v2.2 (65)
 */
 
 "Global.AppName" = "Personal Cloud";
+"Global.Cloud" = "Personal Cloud";
+"Global.Unavailable" = "Unavailable";
+"Global.FeatureUnavailable" = "This feature is currently unavailable.";
+
+"Global.OKAction" = "OK";
+"Global.ConfirmAction" = "Confirm";
+"Global.CancelAction" = "Cancel";
+"Global.BackAction" = "Back";
+"Global.LoadingStatus" = "Loading...";
+"Global.DiscardChanges.Short" = "Discard Unsaved Changes?";
+"Global.DiscardChanges.Long" = "You may have unsaved changes on this page.\n\nTo save your changes and return, use \"Save\" or \"Done\" buttons instead of the \"Back\" button.";
+"Global.DiscardChanges.Confirm" = "Discard";
+"Global.DiscardChanges.Back" = "Review";
+"Global.NoPreview.Short" = "Preview Not Available";
+"Global.NoPreview.Long" = "None of the installed apps supports previewing this item.\n\nYou may open this item in another app or sharing it with others. If you switch apps, ongoing file and photo transfers may be interrupted.";
+"Global.NoPreview.OpenIn" = "Share...";
+
+"Error.CreateCloud" = "Unable to Create Personal Cloud";
+"Error.EnrollDevice" = "Unable to Enroll This Device";
+"Error.NoCloudInNetwork" = "No Personal Cloud can be discovered in your local network.";
+"Error.Invite" = "Unable to Invite Devices";
+"Error.RemoteHTTP" = "A Error Has Occurred";
+"Error.RemoteHTTP.400" = "Unable to complete this operation.";
+"Error.RemoteHTTP.401" = "Request was actively refused.\n\nIf you were browsing an online storage, verify that the saved credentials are valid. If you were browsing a local device, please restart Personal Cloud on that device.";
+"Error.RemoteHTTP.403" = "Access denied for target item.\n\nIf you were browsing an online storage, verify that the saved credentials are valid. If you were browsing a local device, file sharing on that device may have been misconfigured.";
+"Error.RemoteHTTP.404" = "Unable to access target item. Target no longer exists.";
+"Error.RemoteHTTP.429" = "Remote was busy. The operation could not be completed in time.";
+"Error.RemoteHTTP.500" = "Remote reported an internal error. Please restart Personal Cloud or contact support.";
+"Error.RemoteHTTP.501" = "This operation was not supported.";
+"Error.Download" = "Unable to Download This Item";
+"Error.IOConflict" = "An I/O conflict occurred. Try again.";
+"Error.NewFolder" = "Unable to Create New Folder";
+"Error.Rename" = "Unable to Rename This Item";
+"Error.Move" = "Unable to Move This Item";
+"Error.Delete" = "Unable to Delete This Item";
+"Error.Upload" = "Unable to Upload This Item";
+"Error.Timeout" = "Timeout occurred while communicating with remote.";
+"Error.RefreshDirectory" = "Unable to Load This Folder";
+"Error.OldVersion.Short" = "App Version Mismatch";
+"Error.OldVersion.Long" = "A device in your Personal Cloud reported an app version higher than the one installed on this device. Please upgrade from App Store in order to connect to other devices.";
+"Error.Internal" = "An internal error occurred. Try again.";
+"Error.Authentication" = "Unauthorized";
+"Error.RestorePhotos" = "Failed to Restore Backup";
+"Error.Generic" = "An unknown error occurred during last operation.";
+"Error.Import" = "Unable to Import Items";
+"Error.Import.Formattable" = "Failed to import {0} items.";
+
+"Permission.Photos" = "Personal Cloud cannot access your Photos.\n\nPlease go to \"Settings\" > \"Privacy\" > \"Photos\" and turn on Personal Cloud.";
+"Permission.BackgroundRefresh" = "Personal Cloud cannot use Background App Refresh. Auto Photo Backup will be turned off.\n\nPlease go to \"Settings\" > \"General\" > \"Background App Refresh\" and turn on Personal Cloud.\n\nWhen your device is under restrictions or in Low Power Mode, you cannot change Background App Refresh settings or use this feature.";
+
+"Help.Finder" = "Browse Other Devices";
+"Help.BrowseInFinder" = "When a device is connected to local network and launches Personal Cloud app, their shared files will show up here.\n\nTap to open a folder or files. Swipe for see more actions. Use top right buttons to create folder or upload files.\n\nYou should use Favorites tab or Files.app to manage shared files on this device.";
+"Help.SelectPath" = "Browse to a desired location and tap \"Save\".";
+"Help.Favorites" = "Manage Local Files";
+"Help.ManageFavorites" = "Swipe a file in Cloud tab to reveal the \"Favorite\" action.\n\nFavorited items are stored on this device for offline use.\n\nWhen connected to a local network, Favorites are shared with other devices.";
+"Help.Backup" = "Backup Photos Automatically";
+"Help.BackupPhotos" = "Use this feature to backup your entire Photos library to a remote device.\n\nPersonal Cloud saves each photo in 2 formats: Photos Backup is a container format that keeps original data, including Portrait and Live Photo info if available. Quick Look is a common format readable by most viewer software.\n\nAutomatic backup runs once per hour.";
+
+"PLAsset.Photo" = "Image";
+"PLAsset.Video" = "Video";
+"PLAsset.Audio" = "Audio";
+"PLAsset.UnknownType" = "Unknown";
+"PLAsset.Panorama" = "Panorama";
+"PLAsset.HDR" = "HDR";
+"PLAsset.Screenshot" = "Screenshot";
+"PLAsset.LivePhoto" = "Live";
+"PLAsset.Portrait" = "Portrait";
+"PLAsset.UltraWide" = "Ultra-Wide";
+"PLAsset.AutoComposition" = "Auto";
+"PLAsset.Online" = "Cloud";
+"PLAsset.SloMo" = "Slo-Mo";
+"PLAsset.TimeLapse" = "Time Lapse";
+
+"Finder.Title" = "Personal Cloud";
+"Finder.UnknownFileType" = "unknown file type";
+"Finder.EmptyRoot" = "No active device or third-party connections.";
+"Finder.Device" = "device";
+"Finder.GoHome" = "Back to Cloud";
+"Finder.ReturnToRoot" = "return to list of devices";
+"Finder.GoBack" = "Back";
+"Finder.ReturnTo.Formattable" = "return to folder \"{0}\"";
+"Finder.CurrentDirectory" = "Current Directory";
+"Finder.Favorite" = "Favorite";
+"Finder.AddedToFavorite" = "Added to Favorites";
+"Finder.ItemAddedToFavorite.Formattable" = "\"{0}\" has been added to Favorites.";
+"Finder.ReplaceLocalFavorite" = "Replace Local Favorite?";
+"Finder.ReplaceFavoriteAlternatives.Formattable" = "A local favorite with the same name \"{0}\" already exists. If you add this item to Favorites, the old one will be overwritten.\n\nIf you’d like to keep both copies, go to Favorites and rename the old item.";
+"Finder.Replace" = "Replace";
+"Finder.DownloadOversizedFile" = "Download Oversized Item?";
+"Finder.SizeOver100MB" = "This item may be over 100 MB. It may take a long time to transfer this item.";
+"Finder.StartDownloading" = "Download Now";
+"Finder.Downloading" = "Downloading...";
+"Finder.Move" = "Move";
+"Finder.MoveTo" = "Move to...";
+"Finder.Moving" = "Moving...";
+"Finder.Rename" = "Rename";
+"Finder.NewName" = "Enter New Name";
+"Finder.RenameItem.Formattable" = "\"{0}\" will be renamed to...";
+"Finder.SaveNewName" = "Save";
+"Finder.BadFileName" = "Bad File Name";
+"Finder.Renaming" = "Renaming...";
+"Finder.Delete" = "Delete";
+"Finder.RemoveDevice" = "Remove Online Storage";
+"Finder.RemoveCredentials.Formattable" = "Removing \"{0}\" also deletes credentials used to connect to this storage.";
+"Finder.DeleteFile" = "Delete Item";
+"Finder.DeleteContents.Formattable" = "\"{0}\" will be permanently deleted from remote device.\n\nIf this item is a folder or package, all of its contents are also deleted.";
+"Finder.Deleting" = "Deleting...";
+"Finder.NewFolderName" = "Enter Folder Name";
+"Finder.NewFolderHere" = "A new folder will be created here with name:";
+"Finder.NewFolderPlaceholder" = "New Folder";
+"Finder.CreateNewFolder" = "Create";
+"Finder.BadFolderName" = "Bad Folder Name";
+"Finder.MakingNewFolder" = "Creating...";
+"Finder.UploadPickFromFavorites" = "Choose from Favorites";
+"Finder.UploadOpenFilesApp" = "Choose from Files.app";
+"Finder.SelectOneFileOnly" = "Select One File Only";
+"Finder.ConcurrentUploadNotSupported" = "Concurrent upload is not supported in this version.";
+"Finder.CannotReadFromFilesApp" = "Read Error";
+"Finder.ThirdPartyAppNotCompatible" = "Personal Cloud app cannot read this file. The file was transferred in a way that isn’t supported yet.";
+"Finder.Uploading" = "Uploading...";
+
+"Backup.FileType" = "photo backup archive";
+"Backup.RestoreFromPLAsset" = "Restore From Backup";
+"Backup.DownloadBeforeRestore.Formattable" = "\"{0}\" contains restorable photos.\n\nBefore restoring from this backup, you must add this item to Favorites first. Swipe to reveal the \"Favorite\" action.";
+"Backup.RestoreThisPhoto.Formattable" = "\"{0}\" contains restorable photos. Restoring from this backup does not affect existing photos in your library.\n\nDo you want to restore from this backup now?";
+"Backup.Restore" = "Restore";
+"Backup.Restored" = "Restore Success";
+"Backup.AddedToPhotos.Formattable" = "\"{0}\" has been added to your Photos library.";
+"Backup.DeleteBackup" = "Delete Backup";
+"Backup.ChooseBackupLocation" = "Backup Save Location";
+"Backup.AutoBackup" = "Automatic";
+"Backup.ManualBackup" = "Manual";
+"Backup.EnableAutoBackup" = "Enable Automatic Photos Backup";
+"Backup.ChooseLocation" = "Save Location";
+"Backup.SetUpDone" = "Already Set";
+"Backup.Interval" = "Repeat";
+"Backup.Interval.Formattable" = "Every {0} Hour";
+"Backup.ViewItems" = "View Pending Items";
+"Backup.BackupNow" = "Run Next Scheduled Backup Now";
+"Backup.NotSetUp" = "Backup Not Scheduled";
+"Backup.SetUpBeforeViewingItems" = "You must set up automatic backup before managing pending items.";
+"Backup.SetUpBeforeExecuting" = "You must set up automatic backup before running next backup.";
+"Backup.CannotSetUp" = "Unable to Schedule Backup";
+"Backup.NoBackupLocation" = "Save location is not set.";
+"Backup.NoInterval" = "Repeat interval is not set.";
+"Backup.BackgroundRefreshDisabled" = "Background App Refresh Disabled";
+"Backup.CannotExecute" = "Unable to Start Backup";
+"Backup.AlreadyRunning" = "A scheduled backup is already running.";
+"Backup.Executed" = "Backup Started";
+"Backup.NewBackupInProgress" = "Photos backup has been started. You may continue other activities.";
+"Backup.NoNewItems" = "No new or failed item scheduled for next backup.";
+
+"Welcome.Creating" = "Creating Personal Cloud...";
+"Welcome.Created" = "Personal Cloud Created";
+"Welcome.CreatedCloud.Formattable" = "You have created \"{0}\". This device is automatically enrolled.";
+"Welcome.Verifying" = "Loading...";
+"Welcome.Accepted" = "Device Enrolled";
+"Welcome.AcceptedByCloud.Formattable" = "You now have access to \"{0}\".";
+
+"Settings.DeviceName" = "Device Name";
+"Settings.DeviceNameHint" = "The name identifies this device in a Personal Cloud. For best compatibility with other devices, use a short and unique name, and do not use special characters.";
+"Settings.SaveDeviceName" = "Save New Name";
+"Settings.CloudName" = "Cloud Name";
+"Settings.Invitation" = "Invitation";
+"Settings.SendInvitation" = "Invite Other Devices";
+"Settings.SendingInvitation" = "Sending Invitations...";
+"Settings.InvitationGenerated" = "Invitations Sent";
+"Settings.InvitationForOtherDevices.Formattable" = "Enter the following code on new device:\n\n{0}\n\nLeaving this page invalidates verification session.";
+"Settings.RevokeInvitation" = "Stop Verification";
+"Settings.BadDeviceName" = "Invalid Device Name";
+"Settings.NoSpecialCharacters" = "Please use a short and unique name, and do not use special characters.";
+"Settings.BadCloudName" = "Invalid Cloud Name";
+"Settings.CloudNameCannotBeEmpty" = "Cloud name cannot be empty.";
+"Settings.BadInvitation" = "Invalid Verification Code";
+"Settings.EnterValidInvitation" = "Please enter the code shown on the device that sent the invitation.";
+"Settings.SwitchPersonalCloud" = "Switch / Leave Personal Cloud";
+"Settings.LeaveHint" = "You may enroll this device to this Personal Cloud if there are other devices in the cloud. When the last device leaves this cloud, no one will have access to this Personal Cloud.";
+"Settings.Leave" = "Remove This Device from Personal Cloud?";
+"Settings.LeaveWillUnenrollDevice" = "This device will be unenrolled and all saved credentials will be deleted.";
+"Settings.FileSharing" = "File Sharing";
+"Settings.EnableFileSharing" = "Enable File Sharing";
+"Settings.AutoLockDisabled" = "To avoid data corruption during transfers, Auto Lock is disabled when File Sharing is turned on.";
+"Settings.PhotoSharing" = "Photos Sharing";
+"Settings.EnablePhotoSharing" = "Enable Photos Sharing";
+"Settings.WritingToPhotosRestricted.Formattable" = "Other devices have read-only access to your Photos library when sharing is enabled. Added new photos by uploading files to Photos library is not supported. This is an iOS limitation.";
+"Settings.CannotReadPhotos" = "Cannot Read Photos Library";
+
+"Online.ServiceAlreadyExists" = "Name In Use";
+"Online.ChooseADifferentName" = "An online storage with the same name already exists.";
+"Online.Verifying" = "Verifying...";
+
+"AliYun.Title" = "Alibaba Cloud";
+"AliYun.BadName" = "Missing Name";
+"AliYun.NameCannotBeEmpty" = "Choose a unique name for this online storage.";
+"AliYun.BadCredential" = "Missing Credentials";
+"AliYun.BadEndpoint" = "Fill in Endpoint (Extranet Endpoint) as shown on your Alibaba Cloud account page.";
+"AliYun.BadBucket" = "Fill in Bucket as shown on your Alibaba Cloud account page.";
+"AliYun.BadUserID" = "Fill in User ID (Access Key ID) as shown on your Alibaba Cloud account page.";
+"AliYun.BadUserSecret" = "Fill in User Secret (Access Key Secret) as shown on your Alibaba Cloud account page.";
+"AliYun.CannotAddService" = "Cannot Add Alibaba Cloud";
+"AliYun.Unauthorized" = "Your credentials cannot authenticate any valid Alibaba Cloud storage container.";
+
+"SelectPath.Restricted" = "Cannot Go Back";
+"SelectPath.CannotGoBack" = "The current operation restricts target location to this folder and its subfolders.";
+"SelectPath.BadPath" = "Invalid Location";
+"SelectPath.ChooseADevice" = "Unable to save to this location. Please choose a different device.";
+
+"Favorites.Title" = "Favorites";
+"Favorites.Hint" = "Tap (?) for help.";
+"Favorites.Root" = "Favorites/";
+"Favorites.DeleteFile" = "Delete Favorite Item?";
+"Favorites.DeleteContents.Formattable" = "\"{0}\" will be permanently deleted from your device.\n\nIf this item is a folder or package, all of its contents are also deleted.";
+"Favorites.BadFolder" = "This folder has already been moved or deleted.";
+"Favorites.Importing" = "Importing...";
+
+"Apps.NoWebApps" = "No Functions";
